# django-dynamic-filenames

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  README.rst  dynamic_filenames.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codeql.yml  release.yml
dynamic_filenames/: __init__.py
tests/: test_dynamic_filenames.py
tests/testapp/: .gitignore  models.py  settings.py  urls.py  wsgi.py
