[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "django-dynamic-filenames"
authors = [
  { name = "Johannes Maron", email = "johannes@maron.family" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["django", "django-storages", "file", "filenames", "django-pictures"]
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
]
requires-python = ">=3.10"
dependencies = ["django>=4.2.0"]

[dependency-groups]
dev = [
  { include-group = "test" },
]
test = [
  "pytest",
  "pytest-cov",
  "pytest-django",
]

[project.urls]
# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
Homepage = "https://github.com/codingjoe/django-dynamic-filenames"
Changelog = "https://github.com/codingjoe/django-dynamic-filenames/releases"
Source = "https://github.com/codingjoe/django-dynamic-filenames"
Releasenotes = "https://github.com/codingjoe/django-dynamic-filenames/releases/latest"
Documentation = "https://github.com/codingjoe/django-dynamic-filenames?tab=readme-ov-file"
Issues = "https://github.com/codingjoe/django-dynamic-filenames/issues"
Funding = "https://github.com/sponsors/codingjoe"


[tool.flit.module]
name = "dynamic_filenames"

[tool.setuptools_scm]
write_to = "dynamic_filenames/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report=xml --cov-report=term --tb=short -rxs"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"

[tool.coverage.run]
source = ["dynamic_filenames"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
src = ["dynamic_filenames", "tests"]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle errors
    "EXE", # flake8-executable
    "F", # pyflakes
    "I", # isort
    "PGH", # pygrep-hooks
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

ignore = ["D1", "E501", "PT012"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
known-first-party = ["dynamic_filenames", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
