[metadata]
name = django-dynamic-filenames
author = Johannes Hoppe
author-email = info@johanneshoppe.com
summary = Write advanced filename patterns using the Format Specification Mini-Language.
description-file = README.rst
home-page = https://github.com/codingjoe/django-dynamic-filenames
license = MIT License
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License±
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Framework :: Django

[pbr]
skip_authors = true
skip_changelog = true

[tool:pytest]
norecursedirs = env docs .eggs
addopts = --tb=short -rxs
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[flake8]
max-line-length = 99
max-complexity = 10
statistics = true
show-source = true

[pydocstyle]
add-ignore = D1
match-dir = (?!tests|env|docs|\.).*

[isort]
atomic = true
multi_line_output = 5
line_length = 79
skip = manage.py,docs,.tox,env
known_first_party = dynamic_filenames, tests
known_third_party = django, slugify
combine_as_imports = true
