[metadata]
name = django-dynamic-filenames
author = Johannes Maron
author_email = johannes@maron.family
description = Write advanced filename patterns using the Format String Syntax.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT License
license_file = LICENSE
url = https://github.com/codingjoe/django-dynamic-filenames
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    django
    django-storages
    file

[options]
install_requires =
    django>=3.2
setup_requires =
    setuptools_scm
    pytest-runner
tests_require =
    pytest
    pytest-cov
    pytest-django

[options.extras_require]
slugify =

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[tool:pytest]
norecursedirs = env docs .eggs
addopts = --cov=dynamic_filenames --tb=short -rxs
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[coverage:run]
source = dynamic_filenames

[coverage:report]
show_missing = True
skip_covered = True

[pydocstyle]
add_ignore = D1
match_dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
ignore = E203, E501, W503, E731

[isort]
atomic = true
line_length = 88
known_first_party = dynamic_filenames, tests
include_trailing_comma = True
default_section=THIRDPARTY
combine_as_imports = true
